# trishna

./: Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  heroku.yml  install_deps.sh  main.py  requirements.txt
TrishnaBot/: __init__.py  __main__.py
TrishnaBot/modules/: carbon_release.py  dronetrigger_handler.py  linux_release.py  site_scrappers.py  sourceforge_checker.py  wireguard_release.py
TrishnaBot/modules/sql/: __init__.py  rss_records_sql.py
snippets/: carbon_release.py  linux_release.py  site_scrapers.py  site_scrappers.py  sourceforge_checker.py  wireguard_release.py
snippets/sql/: start.py
src/: commands.rs  handler.rs  main.rs
src/modules/: echo.rs  miscellaneous.rs  mod.rs  sites_scraper.rs  stream_tweets.rs
utils/: linux_release.py  telegram_helper.py
