[package]
name = "trishna-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
reqwest = "0.11.11"
scraper = "0.13.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
teloxide = { version = "0.9.1", features = ["macros", "auto-send"] }