[package]
name = "trishna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
reqwest = "0.11.11"
scraper = "0.13.0"
futures = "0.3.21"
log = "0.4.17"
egg-mode = "0.16.0"
pretty_env_logger = "0.4.0"
regex = "1.5.6"
teloxide = { version = "0.9.1", features = ["macros", "auto-send"] }