[package]
name = "trishna"
version = "0.1.0"
authors = ["Shashank Baghel <shnk@radcolor.dev>"]
edition = "2021"
license = "GNU/GPL-v3.0"
description = "Personal telegram assistant/helper and notifier bot written in rust-lang using teloxide! @Trishna_Bot."
keywords = ["telegram", "bot", "rust-lang"]
repository = "https://git.radcolor.dev/trishna.git"
homepage = "https://git.radcolor.dev/trishna.git"
readme = "README.md"
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.11", features = ["blocking"] }
scraper = "0.13.0"
futures = "0.3.21"
log = "0.4.17"
egg-mode = "0.16.0"
pretty_env_logger = "0.4.0"
regex = "1.5.6"
teloxide = { version = "0.9.1", features = ["macros", "auto-send"] }

[profile.release]
codegen-units = 1
lto = "fat"